6206: Making the agent prototype work on OpenJDK 11
Reviewed-by: ghb